--- a/style.css
+++ b/style.css
@@ -6,6 +6,15 @@
     box-sizing: border-box;
 }
 
+/*special settings */
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+}
+
 .grid-container {
     width: 500px;
     height: 600px;
@@ -26,4 +35,29 @@
     border: 1px solid rgb(255, 255, 255, 0.3);
     border-bottom-width: 0;
     
+}
+
+.controllers {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.colors-control {
+    display: flex;
+    gap: 1rem;
+}
+
+button {
+    padding: 4px;
+    font-size: large;
+    background-color: blue;
+    color: white;
+    border: 2px solid cornflowerblue;
+    border-radius: 14px;
+
+}
+
+button:hover {
+    background-color: rgb(9, 9, 141);
 }
