--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 .row {
     flex: 1;
     display: flex;
-    background: grey;
+    background-color: grey;
     border: 1px solid rgb(255, 255, 255, 0.3);
     border-bottom-width: 0;
     
@@ -60,4 +60,13 @@ button {
 
 button:hover {
     background-color: rgb(9, 9, 141);
+}
+
+
+.row-colored {
+    flex: 1;
+    display: flex;
+    background-color: grey;
+    border: 1px solid rgb(255, 255, 255, 0.3);
+    border-bottom-width: 0;
 }
